openshift-oauth-example/raycluster-jobtest-oauth.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.beta.openshift.io/serving-cert-secret-name: jobtest-proxy-tls-secret
  name: jobtest-oauth
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: oauth-proxy
    port: 443
    protocol: TCP
    targetPort: 8443
  selector:
    app.kubernetes.io/created-by: kuberay-operator
    app.kubernetes.io/name: kuberay
    ray.io/cluster: jobtest
    ray.io/identifier: jobtest-head
    ray.io/node-type: head
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: jobtest-oauth-proxy
spec:
  to:
    kind: Service
    name: jobtest-oauth
  tls:
    termination: Reencrypt
